# railier

./: .gitignore  LICENSE  PRD.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  sample-aml-policy.txt  turbo.json
apps/api/: package.json  pyproject.toml  run-uvicorn.js
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: __init__.py  agent.py  ai.py  evaluate.py  guardrails.py
apps/api/app/core/: config.py  database.py
apps/api/app/models/: __init__.py  guardrail.py
apps/api/app/schemas/: __init__.py
apps/api/src/: main.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/components/ai/: AIAssistant.tsx
apps/web/src/components/canvas/: BlockNode.tsx  ScratchBlock.tsx  ScratchCanvas.tsx
apps/web/src/components/config/: ConfigPanel.tsx
apps/web/src/components/layout/: Header.tsx
apps/web/src/components/palette/: BlockPalette.tsx
apps/web/src/components/testing/: TestRunner.tsx
apps/web/src/lib/: api.ts  localStorage.ts
apps/web/src/pages/: DeployPage.tsx
apps/web/src/store/: index.ts
